# presentation

./: README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/versions/: 81e58c8a7542_create_personal_info_table.py
api/: app.py  cli.py  config.py  default.toml  enums.py
api/models/: __init__.py  details.py
api/routes/: __init__.py  detail.py
api/serializers/: detail.py
api/utils/: details.py
