[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "presentation"
version = "1.0"
requires-python = ">= 3.8"
dependencies = [
    "fastapi==0.110.0",
    "sqlmodel==0.0.16",
    "dynaconf==3.2.4",
    "uvicorn==0.27.1",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "rich==13.7.1",
    "typer==0.9.0"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "ipdb",
    "ipython",
    "pip-tools",
    "pyright",
    "flake8",
    "black",
    "isort",
]

[project.scripts]
presentation = "api.cli:main"

[tool.setuptools]
packages = ["api"]


[tool.black]
color = true
line-length = 100
target-version = ['py310']
skip-string-normalization = true
